killing the inside of the MLC to save compute time

--- a/py/Making leaf points.ipynb
+++ b/py/Making leaf points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "(20, 180)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "CompletedProcess(args='pbcopy', returncode=0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,6 +341,285 @@
     "    total_string=total_string+stringthing\n",
     "print(total_string)\n",
     "subprocess.run(\"pbcopy\", universal_newlines=True, input=total_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_for_scattering=6\n",
+    "lengths_at_points2=lengths_at_points-distance_for_scattering\n",
+    "#for making kill volumes inside leaf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/gate/mlc_y0/daughters/name                      mlc_y0_kill \n",
+      "/gate/mlc_y0/daughters/insert                      wedge \n",
+      "/gate/mlc_y0_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y0_kill/geometry/setNarrowerXLength  157.5 mm \n",
+      "/gate/mlc_y0_kill/geometry/setXLength          158.5 mm  \n",
+      "/gate/mlc_y0_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y0_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y0_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y0_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y0_kill/vis/setColor                 white \n",
+      "/gate/mlc_y1/daughters/name                      mlc_y1_kill \n",
+      "/gate/mlc_y1/daughters/insert                      wedge \n",
+      "/gate/mlc_y1_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y1_kill/geometry/setNarrowerXLength  158.5 mm \n",
+      "/gate/mlc_y1_kill/geometry/setXLength          159.4 mm  \n",
+      "/gate/mlc_y1_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y1_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y1_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y1_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y1_kill/vis/setColor                 white \n",
+      "/gate/mlc_y2/daughters/name                      mlc_y2_kill \n",
+      "/gate/mlc_y2/daughters/insert                      wedge \n",
+      "/gate/mlc_y2_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y2_kill/geometry/setNarrowerXLength  159.4 mm \n",
+      "/gate/mlc_y2_kill/geometry/setXLength          160.1 mm  \n",
+      "/gate/mlc_y2_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y2_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y2_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y2_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y2_kill/vis/setColor                 white \n",
+      "/gate/mlc_y3/daughters/name                      mlc_y3_kill \n",
+      "/gate/mlc_y3/daughters/insert                      wedge \n",
+      "/gate/mlc_y3_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y3_kill/geometry/setNarrowerXLength  160.1 mm \n",
+      "/gate/mlc_y3_kill/geometry/setXLength          160.5 mm  \n",
+      "/gate/mlc_y3_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y3_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y3_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y3_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y3_kill/vis/setColor                 white \n",
+      "/gate/mlc_y4/daughters/name                      mlc_y4_kill \n",
+      "/gate/mlc_y4/daughters/insert                      wedge \n",
+      "/gate/mlc_y4_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y4_kill/geometry/setNarrowerXLength  160.5 mm \n",
+      "/gate/mlc_y4_kill/geometry/setXLength          160.9 mm  \n",
+      "/gate/mlc_y4_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y4_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y4_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y4_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y4_kill/vis/setColor                 white \n",
+      "/gate/mlc_y5/daughters/name                      mlc_y5_kill \n",
+      "/gate/mlc_y5/daughters/insert                      wedge \n",
+      "/gate/mlc_y5_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y5_kill/geometry/setNarrowerXLength  160.9 mm \n",
+      "/gate/mlc_y5_kill/geometry/setXLength          161.1 mm  \n",
+      "/gate/mlc_y5_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y5_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y5_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y5_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y5_kill/vis/setColor                 white \n",
+      "/gate/mlc_y6/daughters/name                      mlc_y6_kill \n",
+      "/gate/mlc_y6/daughters/insert                      wedge \n",
+      "/gate/mlc_y6_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y6_kill/geometry/setNarrowerXLength  161.1 mm \n",
+      "/gate/mlc_y6_kill/geometry/setXLength          160.9 mm  \n",
+      "/gate/mlc_y6_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y6_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y6_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y6_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y6_kill/vis/setColor                 white \n",
+      "/gate/mlc_y7/daughters/name                      mlc_y7_kill \n",
+      "/gate/mlc_y7/daughters/insert                      wedge \n",
+      "/gate/mlc_y7_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y7_kill/geometry/setNarrowerXLength  160.9 mm \n",
+      "/gate/mlc_y7_kill/geometry/setXLength          160.6 mm  \n",
+      "/gate/mlc_y7_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y7_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y7_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y7_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y7_kill/vis/setColor                 white \n",
+      "/gate/mlc_y8/daughters/name                      mlc_y8_kill \n",
+      "/gate/mlc_y8/daughters/insert                      wedge \n",
+      "/gate/mlc_y8_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y8_kill/geometry/setNarrowerXLength  160.6 mm \n",
+      "/gate/mlc_y8_kill/geometry/setXLength          160.2 mm  \n",
+      "/gate/mlc_y8_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y8_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y8_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y8_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y8_kill/vis/setColor                 white \n",
+      "/gate/mlc_y9/daughters/name                      mlc_y9_kill \n",
+      "/gate/mlc_y9/daughters/insert                      wedge \n",
+      "/gate/mlc_y9_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y9_kill/geometry/setNarrowerXLength  160.2 mm \n",
+      "/gate/mlc_y9_kill/geometry/setXLength          159.8 mm  \n",
+      "/gate/mlc_y9_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y9_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y9_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y9_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y9_kill/vis/setColor                 white \n",
+      "/gate/mlc_y10/daughters/name                      mlc_y10_kill \n",
+      "/gate/mlc_y10/daughters/insert                      wedge \n",
+      "/gate/mlc_y10_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y10_kill/geometry/setNarrowerXLength  159.8 mm \n",
+      "/gate/mlc_y10_kill/geometry/setXLength          159.2 mm  \n",
+      "/gate/mlc_y10_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y10_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y10_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y10_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y10_kill/vis/setColor                 white \n",
+      "/gate/mlc_y11/daughters/name                      mlc_y11_kill \n",
+      "/gate/mlc_y11/daughters/insert                      wedge \n",
+      "/gate/mlc_y11_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y11_kill/geometry/setNarrowerXLength  159.2 mm \n",
+      "/gate/mlc_y11_kill/geometry/setXLength          158.3 mm  \n",
+      "/gate/mlc_y11_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y11_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y11_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y11_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y11_kill/vis/setColor                 white \n",
+      "/gate/mlc_y12/daughters/name                      mlc_y12_kill \n",
+      "/gate/mlc_y12/daughters/insert                      wedge \n",
+      "/gate/mlc_y12_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y12_kill/geometry/setNarrowerXLength  158.3 mm \n",
+      "/gate/mlc_y12_kill/geometry/setXLength          157.1 mm  \n",
+      "/gate/mlc_y12_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y12_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y12_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y12_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y12_kill/vis/setColor                 white \n",
+      "/gate/mlc_y13/daughters/name                      mlc_y13_kill \n",
+      "/gate/mlc_y13/daughters/insert                      wedge \n",
+      "/gate/mlc_y13_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y13_kill/geometry/setNarrowerXLength  157.1 mm \n",
+      "/gate/mlc_y13_kill/geometry/setXLength          156.0 mm  \n",
+      "/gate/mlc_y13_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y13_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y13_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y13_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y13_kill/vis/setColor                 white \n",
+      "/gate/mlc_y14/daughters/name                      mlc_y14_kill \n",
+      "/gate/mlc_y14/daughters/insert                      wedge \n",
+      "/gate/mlc_y14_kill/setMaterial                  Tungsten \n",
+      "/gate/mlc_y14_kill/geometry/setNarrowerXLength  156.0 mm \n",
+      "/gate/mlc_y14_kill/geometry/setXLength          154.5 mm  \n",
+      "/gate/mlc_y14_kill/geometry/setYLength          5 mm \n",
+      "/gate/mlc_y14_kill/geometry/setZLength          3 mm \n",
+      "/gate/mlc_y14_kill/placement/setTranslation     -3 0 0 mm \n",
+      "/gate/mlc_y14_kill/vis/setVisible               1 \n",
+      "/gate/mlc_y14_kill/vis/setColor                 white \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='pbcopy', returncode=0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "narrow_x0=1\n",
+    "wide_x0=1\n",
+    "half_length_x0=1\n",
+    "total_string=\"\"\n",
+    "kill_string=\"/gate/actor/addActor   KillActor                         MyActor \\n\"+\\\n",
+    "\"/gate/actor/MyActor/save                                 MyOutputFile.txt \\n\"+\\\n",
+    "\"/gate/actor/MyActor/attachTo                             mlc_leaf \\n\"+\\\n",
+    "\"/gate/actor/MyActor/addFilter                            volumeFilter \\n\"\n",
+    "for ij in range(0,len(points_on_leaf)-1):\n",
+    "    mlc_string=\"mlc_y\"+str(ij)\n",
+    "    mlc_string_kill=\"mlc_y\"+str(ij)+\"_kill\"\n",
+    "    if lengths_at_points[ij]<lengths_at_points2[ij+1]:\n",
+    "        narrow_x=lengths_at_points2[ij]\n",
+    "        wide_x=lengths_at_points2[ij+1]\n",
+    "    else:\n",
+    "        wide_x=lengths_at_points2[ij+1]\n",
+    "        narrow_x=lengths_at_points2[ij]\n",
+    "        \n",
+    "    if ij==0:\n",
+    "        narrow_x0=narrow_x\n",
+    "        wide_x0=wide_x\n",
+    "        half_length_x0=wide_x0+narrow_x0/2\n",
+    "        \n",
+    "    half_length_x=(wide_x+narrow_x)/4\n",
+    "    \n",
+    "    translation_x=-int(distance_for_scattering/2)\n",
+    "    translation_z=0\n",
+    "    stringthing=\"/gate/\"+mlc_string+\"/daughters/name                      \"+mlc_string_kill+\" \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string+\"/daughters/insert                      wedge \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/setMaterial                  Tungsten \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/geometry/setNarrowerXLength  \"+str(narrow_x)+\" mm \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/geometry/setXLength          \"+str(wide_x)+\" mm  \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/geometry/setYLength          5 mm \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/geometry/setZLength          3 mm \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/placement/setTranslation     \"+str(translation_x)+\" 0 \"+str(translation_z)+\" mm \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/vis/setVisible               1 \\n\"+\\\n",
+    "    \"/gate/\"+mlc_string_kill+\"/vis/setColor                 white \\n\"\n",
+    "    total_string=total_string+stringthing\n",
+    "    stringthingkill=\"/gate/actor/MyActor/volumeFilter/addVolume \"+mlc_string+\"\\n\"\n",
+    "    kill_string=kill_string+stringthingkill\n",
+    "print(total_string)\n",
+    "\n",
+    "subprocess.run(\"pbcopy\", universal_newlines=True, input=total_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/gate/actor/addActor   KillActor                         MyActor \n",
+      "/gate/actor/MyActor/save                                 MyOutputFile.tx \n",
+      "t/gate/actor/MyActor/attachTo                             MyVolume \n",
+      "/gate/actor/MyActor/addFilter                            volumeFilter \n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y0_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y1_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y2_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y3_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y4_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y5_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y6_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y7_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y8_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y9_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y10_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y11_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y12_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y13_kill\n",
+      "/gate/actor/MyActor/volumeFilter/addVolume mlc_y14_kill\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='pbcopy', returncode=0)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(kill_string)\n",
+    "subprocess.run(\"pbcopy\", universal_newlines=True, input=kill_string)"
    ]
   },
   {
@@ -458,6 +737,13 @@
     "print(total_string)\n",
     "subprocess.run(\"pbcopy\", universal_newlines=True, input=total_string)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
