beam spectra in SpectraFromPh1.py

--- a/py/Making leaf points.ipynb
+++ b/py/Making leaf points.ipynb
@@ -102,205 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/gate/mlc_leaf/daughters/name                      mlc_y0 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y0/setMaterial                  Tungsten \n",
-      "/gate/mlc_y0/geometry/setNarrowerXLength  163.5 mm \n",
-      "/gate/mlc_y0/geometry/setXLength          164.5 mm  \n",
-      "/gate/mlc_y0/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y0/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y0/placement/setTranslation     112.0 50 30 mm \n",
-      "/gate/mlc_y0/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y0/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y0/vis/setVisible               1 \n",
-      "/gate/mlc_y0/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y1 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y1/setMaterial                  Tungsten \n",
-      "/gate/mlc_y1/geometry/setNarrowerXLength  164.5 mm \n",
-      "/gate/mlc_y1/geometry/setXLength          165.4 mm  \n",
-      "/gate/mlc_y1/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y1/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y1/placement/setTranslation     112.475 50 25 mm \n",
-      "/gate/mlc_y1/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y1/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y1/vis/setVisible               1 \n",
-      "/gate/mlc_y1/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y2 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y2/setMaterial                  Tungsten \n",
-      "/gate/mlc_y2/geometry/setNarrowerXLength  165.4 mm \n",
-      "/gate/mlc_y2/geometry/setXLength          166.1 mm  \n",
-      "/gate/mlc_y2/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y2/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y2/placement/setTranslation     112.875 50 20 mm \n",
-      "/gate/mlc_y2/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y2/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y2/vis/setVisible               1 \n",
-      "/gate/mlc_y2/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y3 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y3/setMaterial                  Tungsten \n",
-      "/gate/mlc_y3/geometry/setNarrowerXLength  166.1 mm \n",
-      "/gate/mlc_y3/geometry/setXLength          166.5 mm  \n",
-      "/gate/mlc_y3/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y3/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y3/placement/setTranslation     113.15 50 15 mm \n",
-      "/gate/mlc_y3/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y3/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y3/vis/setVisible               1 \n",
-      "/gate/mlc_y3/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y4 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y4/setMaterial                  Tungsten \n",
-      "/gate/mlc_y4/geometry/setNarrowerXLength  166.5 mm \n",
-      "/gate/mlc_y4/geometry/setXLength          166.9 mm  \n",
-      "/gate/mlc_y4/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y4/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y4/placement/setTranslation     113.35 50 10 mm \n",
-      "/gate/mlc_y4/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y4/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y4/vis/setVisible               1 \n",
-      "/gate/mlc_y4/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y5 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y5/setMaterial                  Tungsten \n",
-      "/gate/mlc_y5/geometry/setNarrowerXLength  166.9 mm \n",
-      "/gate/mlc_y5/geometry/setXLength          167.1 mm  \n",
-      "/gate/mlc_y5/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y5/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y5/placement/setTranslation     113.5 50 5 mm \n",
-      "/gate/mlc_y5/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y5/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y5/vis/setVisible               1 \n",
-      "/gate/mlc_y5/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y6 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y6/setMaterial                  Tungsten \n",
-      "/gate/mlc_y6/geometry/setNarrowerXLength  167.1 mm \n",
-      "/gate/mlc_y6/geometry/setXLength          166.9 mm  \n",
-      "/gate/mlc_y6/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y6/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y6/placement/setTranslation     113.5 50 0 mm \n",
-      "/gate/mlc_y6/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y6/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y6/vis/setVisible               1 \n",
-      "/gate/mlc_y6/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y7 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y7/setMaterial                  Tungsten \n",
-      "/gate/mlc_y7/geometry/setNarrowerXLength  166.9 mm \n",
-      "/gate/mlc_y7/geometry/setXLength          166.6 mm  \n",
-      "/gate/mlc_y7/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y7/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y7/placement/setTranslation     113.375 50 -5 mm \n",
-      "/gate/mlc_y7/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y7/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y7/vis/setVisible               1 \n",
-      "/gate/mlc_y7/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y8 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y8/setMaterial                  Tungsten \n",
-      "/gate/mlc_y8/geometry/setNarrowerXLength  166.6 mm \n",
-      "/gate/mlc_y8/geometry/setXLength          166.2 mm  \n",
-      "/gate/mlc_y8/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y8/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y8/placement/setTranslation     113.19999999999999 50 -10 mm \n",
-      "/gate/mlc_y8/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y8/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y8/vis/setVisible               1 \n",
-      "/gate/mlc_y8/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y9 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y9/setMaterial                  Tungsten \n",
-      "/gate/mlc_y9/geometry/setNarrowerXLength  166.2 mm \n",
-      "/gate/mlc_y9/geometry/setXLength          165.8 mm  \n",
-      "/gate/mlc_y9/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y9/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y9/placement/setTranslation     113.0 50 -15 mm \n",
-      "/gate/mlc_y9/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y9/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y9/vis/setVisible               1 \n",
-      "/gate/mlc_y9/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y10 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y10/setMaterial                  Tungsten \n",
-      "/gate/mlc_y10/geometry/setNarrowerXLength  165.8 mm \n",
-      "/gate/mlc_y10/geometry/setXLength          165.2 mm  \n",
-      "/gate/mlc_y10/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y10/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y10/placement/setTranslation     112.75 50 -20 mm \n",
-      "/gate/mlc_y10/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y10/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y10/vis/setVisible               1 \n",
-      "/gate/mlc_y10/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y11 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y11/setMaterial                  Tungsten \n",
-      "/gate/mlc_y11/geometry/setNarrowerXLength  165.2 mm \n",
-      "/gate/mlc_y11/geometry/setXLength          164.3 mm  \n",
-      "/gate/mlc_y11/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y11/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y11/placement/setTranslation     112.375 50 -25 mm \n",
-      "/gate/mlc_y11/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y11/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y11/vis/setVisible               1 \n",
-      "/gate/mlc_y11/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y12 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y12/setMaterial                  Tungsten \n",
-      "/gate/mlc_y12/geometry/setNarrowerXLength  164.3 mm \n",
-      "/gate/mlc_y12/geometry/setXLength          163.1 mm  \n",
-      "/gate/mlc_y12/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y12/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y12/placement/setTranslation     111.85 50 -30 mm \n",
-      "/gate/mlc_y12/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y12/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y12/vis/setVisible               1 \n",
-      "/gate/mlc_y12/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y13 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y13/setMaterial                  Tungsten \n",
-      "/gate/mlc_y13/geometry/setNarrowerXLength  163.1 mm \n",
-      "/gate/mlc_y13/geometry/setXLength          162.0 mm  \n",
-      "/gate/mlc_y13/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y13/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y13/placement/setTranslation     111.275 50 -35 mm \n",
-      "/gate/mlc_y13/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y13/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y13/vis/setVisible               1 \n",
-      "/gate/mlc_y13/vis/setColor                 magenta \n",
-      "/gate/mlc_leaf/daughters/name                      mlc_y14 \n",
-      "/gate/mlc_leaf/daughters/insert                      wedge \n",
-      "/gate/mlc_y14/setMaterial                  Tungsten \n",
-      "/gate/mlc_y14/geometry/setNarrowerXLength  162.0 mm \n",
-      "/gate/mlc_y14/geometry/setXLength          160.5 mm  \n",
-      "/gate/mlc_y14/geometry/setYLength          5 mm \n",
-      "/gate/mlc_y14/geometry/setZLength          3 mm \n",
-      "/gate/mlc_y14/placement/setTranslation     110.625 50 -40 mm \n",
-      "/gate/mlc_y14/placement/setRotationAxis    1 0 0  \n",
-      "/gate/mlc_y14/placement/setRotationAngle   90 deg \n",
-      "/gate/mlc_y14/vis/setVisible               1 \n",
-      "/gate/mlc_y14/vis/setColor                 magenta \n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'points_on_leaf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-00ac32eebc31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhalf_length_x0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtotal_string\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mij\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoints_on_leaf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mmlc_string\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"mlc_y\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mij\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlengths_at_points\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mij\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mlengths_at_points\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mij\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'points_on_leaf' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args='pbcopy', returncode=0)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
